--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'groovy'
 
-sourceCompatibility = 1.6
+sourceCompatibility = 1.7
 version = '0.0.1'
 jar {
     manifest {
@@ -15,7 +15,7 @@ repositories {
 }
 
 dependencies {
-	compile group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.1.5'
+	groovy 'org.codehaus.groovy:groovy-all:2.2.0'
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.2.2'
 	compile group:'commons-httpclient', name:'commons-httpclient', version:'3.1'
 		
